@startuml

title __CONTROLLERS's Class Diagram__\n

  package  {
    package controllers {
      class AccountController {
          - oldPassword : PasswordField
          - newPassword : PasswordField
          - imageView : ImageView
          - email : TextField
          - username : TextField
          + init()
          ~ enterFromEmail()
          ~ enterFromUsername()
          ~ enterFromOld()
          ~ enterFromNew()
          ~ changeImage()
          ~ CanelAction()
          ~ ConfirmAction()
      }
    }
  }
  

  package  {
    package controllers {
      class AddGameController {
          + name : TextField
          + path : TextField
          + getApp()
          + setApp()
          + submit()
          + browse()
          + cancel()
      }
    }
  }
  

  package  {
    package controllers {
      class AppController {
          - gameList : FlowPane
          - username : Label
          - propic : ImageView
          - preview : MediaView
          + initialize()
          + add()
          + openAddGame()
          + refreshGamesList()
          + init()
          + refreshAccount()
          ~ manageAccount()
      }
    }
  }
  

  package  {
    package controllers {
      class GameController {
          + gameImage : ImageView
          + name : Label
          + initialize()
          + setGame()
          + init()
      }
    }
  }
  

  package  {
    package controllers {
      class LoginController {
          - errorData : Label
          - password : PasswordField
          - login : Button
          - register : Button
          - username : TextField
          + registration()
          ~ loginAction()
          ~ forgotPassword()
          ~ enterFromField()
      }
    }
  }
  

  package  {
    package controllers {
      class Main {
          {static} + viewPath : String
          {static} + controllersPath : String
          {static} + resourcesPath : String
          + start()
          {static} + main()
      }
    }
  }
  

  package  {
    package controllers {
      class RegisterController {
          - errorEmail : Label
          - errorPassword1 : Label
          - errorPassword2 : Label
          - username : TextField
          - password : PasswordField
          - confirmPassword : PasswordField
          - email : TextField
          - dialog : TextInputDialog
          - code : String
          - generateCode()
          - sendEmail()
          - testEmail()
          + sendData()
          - showConfirmDialog()
          - showOkDialog()
          + refuse()
          ~ confirmAction()
      }
    }
  }
  

  AccountController o-- User : user
  AccountController o-- User : oldUser
  AccountController o-- AppController : app
  AddGameController o-- AppController : app
  AppController o-- User : actualUser
  GameController o-- Game : game
  LoginController o-- User : actualUser
  Main -up-|> Application


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
